# rust_exercises

./: README.md
chapter1/: Cargo.toml
chapter2/: Cargo.toml
ci_pipelines/: Cargo.toml
formatted_print/: main  main.rs
gcd/: Cargo.toml  gcd.rs
integration_testing/: Cargo.toml
integration_testing/tests/: cli.rs
memory/: Cargo.toml
memory/src/: main.rs
mutability/: Cargo.toml
string/: Cargo.toml
string/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
